# Transude

./: README.md  data_frame_filter_factory.py  data_frame_filter_manager.py  pyproject.toml  transude.py
src/: data_frame_filter.py  data_frame_filter_query.py  transude.py
src/transude/: __init__.py  data_frame_filter.py  transude.py
src/transude/pandas/: __init__.py  data_frame_filter_factory.py  data_frame_query_builder.py
tests/: test_data_frame_filter_query.py  test_pandas_data_frame_filter_query.py  test_transude.py
transude/: __init__.py  data_frame_filter.py  data_frame_filter_factory.py  data_frame_filter_manager.py
