[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transude"
version = "1.1.4"
authors = [
  { name="Ewvyx"},
]
description = "Simple tool set for filtering DataFrames by building queries from one or more filters."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gizix/transude"
"Bug Tracker" = "https://github.com/gizix/transude/issues"
